--- a/package.json
+++ b/package.json
@@ -16,13 +16,17 @@
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
-        "resolve-url-loader": "^5.0.0",
+        "resolve-url-loader": "^3.1.2",
         "sass": "^1.32.11",
-        "sass-loader": "^11.0.1"
+        "sass-loader": "^11.0.1",
+        "vue": "^2.6.14",
+        "vue-loader": "^15.9.8",
+        "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.1.1",
         "admin-lte": "3.2",
-        "autoprefixer": "10.4.5"
+        "autoprefixer": "10.4.5",
+        "router": "^1.3.7"
     }
 }
